tomcat-deploy.yaml
#tomcat-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat
  name: tomcat
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - image: 194453983284.dkr.ecr.ap-northeast-1.amazonaws.com/last-tomcat:latest
        name: tomcat
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        nodeSelector:
          app: tomcat
