tomcat-service.yaml
#nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: was
  labels:
    app: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
