tomcat-ingress.yaml
# tomcat-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: web
  annotations:
    kubetnetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0fccc61c3cbf88023, subnet-08cdab8c98e5ae84a
    alb.ingress.kubernetes.io/load-balancer-name: tomcat-load-balancer
    alb.ingress.kubernetes.io/target-type: instance
    ingress.class.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-service 
            port:
              number: 8080
